tests/ui/reborrow/coerce-shared-missing-target-field.stderr
error: implementing `CoerceShared` requires every target field to have a corresponding source field
  --> $DIR/coerce-shared-missing-target-field.rs:14:5
   |
LL |     len: usize,
   |     ^^^^^^^^^^ target field `len` has no corresponding source field
...
LL | impl<'a, T> CoerceShared<MissingSourceRef<'a, T>> for MissingSourceMut<'a, T> {}
   |                                                       ----------------------- source type `MissingSourceMut` does not contain field `len`

error: aborting due to 1 previous error

